[package]
name = "scoped-join-set"
version = "0.8.1"
readme = "README.md"
edition = "2021"
authors = ["Lech Mazur <mazurlech@proton.me>"]
license = "MIT OR Apache-2.0"
description = "A scoped variant of tokio::task::JoinSet for spawning non-'static futures."
repository = "https://github.com/Le-Maz/scoped-join-set"
keywords = ["tokio", "async", "concurrency", "scoped", "joinset"]
categories = ["asynchronous", "concurrency", "data-structures"]

[dependencies]
tokio = { version = "^1.48", features = ["rt", "rt-multi-thread"] }

[dev-dependencies]
tokio = { version = "^1.48", features = ["macros", "time", "sync"] }

[profile.bench]
opt-level = 3
debug = true
